# zigXrustXc

./: .gitignore  README.md  run.sh
c/: main.c
rust/: Cargo.toml
rust/src/: main.rs
zig/: build.zig
zig/src/: main.zig
